# media-generation-service

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  setup.sh
alembic/: env.py
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: generation.py
app/clients/: __init__.py  replicate_client.py  storage_client.py
app/core/: __init__.py  config.py  database.py  exceptions.py
app/models/: __init__.py  job.py
app/repositories/: __init__.py  job_repository.py
app/schemas/: __init__.py  generation.py  job.py
app/services/: __init__.py  job_service.py
app/tasks/: __init__.py  celery_app.py  generation_tasks.py
